# SyftUI

./: .bumpversion.toml  .gitignore  .gitmodules  .prettierignore  README.md  bun.lockb  justfile  lint-staged.config.js  next.config.mjs  package.json  release.json.template  src-syftgo  tsconfig.json
.github/workflows/: build-desktop.yml  draft-release.yml  gen-release-notes.yml  publish-release.yml  release.yml  test.yml
.husky/: commit-msg  pre-commit
app/: globals.css  layout.tsx  loading.tsx  metadata.ts  page.tsx
app/apps/: page.tsx
app/dashboard/: page.tsx
app/diagnostic/: page.tsx
app/logs/: page.tsx
app/marketplace/: page.tsx
app/profile/: page.tsx
app/settings/: page.tsx
app/workspace/: page.tsx
components/: breadcrumb.tsx  connection-status.tsx  file-conflict-dialog.tsx  file-details.tsx  file-explorer.tsx  file-icon.tsx  file-manager.tsx  file-preview.tsx  file-system-context.tsx  floating-connection-status.tsx  history-context.tsx  history-context.tsx.bak  logo.tsx  logs.tsx  marketplace-app-detail.tsx  marketplace.tsx  notification-bell.tsx  notification-context.tsx  permissions-dialog.tsx  settings.tsx  share-dialog.tsx  sidebar.tsx  sync-status-dialog.tsx  sync-status.tsx  theme-toggle.tsx  toolbar.tsx
components/app/: app-card.tsx  app-detail.tsx  app-list.tsx  index.ts  install-confirmation-dialog.tsx  review-dialog.tsx
components/connection/: connection-form.tsx  connection-status.tsx
components/contexts/: clipboard-context.tsx  connection-context.tsx  file-system-context.tsx  sidebar-context.tsx  sync-context.tsx  upload-context.tsx
components/dashboard/: dashboard.css  dashboard.d.ts  dashboard.tsx  iframe-widget.tsx  mock-data.ts  widget-base.tsx  widget-content.tsx
components/diagnostic/: bug-report-dialog.tsx  diagnostic.d.ts  network-topology-card.tsx  ping-status-card.tsx
components/file-toolbar/: file-actions.tsx  index.tsx  sort-options.tsx  view-toggle.tsx
components/profile/: activity-heatmap.tsx  profile.tsx  social-connection-button.tsx
components/services/: file-operations.tsx
components/ui/: chart.tsx  progress.tsx  scroll-area.tsx  toast.tsx  toaster.tsx  toolbar.tsx
components/workspace/: breadcrumb.tsx  file-conflict-dialog.tsx  file-details.tsx  file-explorer.tsx  file-icon.tsx  file-manager.tsx  file-preview.tsx  permissions-dialog.tsx  sync-status-dialog.tsx  sync-status.tsx  upload-progress.tsx
docs/: widget-development.md
hooks/: use-file-navigation.tsx
lib/: initialization.ts  mock-apps.ts  mock-data.ts  mock-logs.ts  types.ts  utils.ts
lib/connection/: constants.ts  use-connection.ts
lib/storage/: session-storage.ts
lib/utils/: favorites.ts  url.ts
public/: widgets.css
scripts/: generate-release-notes.sh
src-frontend/: .gitignore  bun.lockb  globals.d.ts  lint-staged.config.js  next.config.mjs  package.json
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.release-extras.json
src-tauri/binaries/: process-wick-aarch64-apple-darwin  process-wick-x86_64-apple-darwin  process-wick-x86_64-unknown-linux-gnu  uvx-x86_64-apple-darwin
src-tauri/capabilities/: about.json  default.json  main.json  updates.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs  updates.rs  utils.rs  version.rs  windows.rs
src-tauri/windows/: hooks.nsh
stores/: index.ts  useConnectionStore.ts  useFileSystemStore.ts  useNotificationStore.ts  useSidebarStore.ts
(+142 files in other folders)
