[package]
name = "SyftBox"
version = "0.1.0"
description = "The internet for private data"
authors = ["OpenMined Foundation"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1.1", features = [] }

[dependencies]
hex = "0.4.3"
log = "0.4.27"
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tauri = { version = "2.4.1", features = ["tray-icon", "image-png", "devtools"] }
tauri-plugin-log = "2.3.1"
tauri-plugin-shell = "2.2.1"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-autostart = "2.3.0"
tauri-plugin-updater = "2.7.0"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26"
