[package]
name = "SyftBox"
version = "0.1.0"
description = "The internet for private data"
authors = ["OpenMined Foundation"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
hex = "0.4.3"
log = "0.4.27"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tauri = { version = "2.5.1", features = ["tray-icon", "image-png", "devtools"] }
tauri-plugin-dialog = "2.2.2"
tauri-plugin-log = "2.4.0"
tauri-plugin-opener = "2.2.7"
tauri-plugin-shell = "2.2.1"
urlencoding = "2.1.3"
dirs = "6.0.0"
time-macros = "0.2.22"
time = "0.3.41"
tauri-plugin-process = "2.2.1"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-autostart = "2.3.0"
tauri-plugin-updater = "2.7.1"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26.0"
objc = "0.2.7"
